--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">KotlinTestApp</string>
+    <string name="game_name">Text Game</string>
+    <string name="start_button">start</string>
+    <string name="exit_button">exit</string>
 </resources>
