--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,15 @@
     <string name="game_name">Text Game</string>
     <string name="start_button">start</string>
     <string name="exit_button">exit</string>
+    <string name="test_long_text">nananaananananananananannannaannananananannanananannanana</string>
+    <string name="up">up</string>
+    <string name="down">down</string>
+    <string name="north">n</string>
+    <string name="south">s</string>
+    <string name="east">e</string>
+    <string name="west">w</string>
+    <string name="north_east">ne</string>
+    <string name="north_west">nw</string>
+    <string name="south_east">se</string>
+    <string name="south_west">sw</string>
 </resources>
