--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="north_west">nw</string>
     <string name="south_east">se</string>
     <string name="south_west">sw</string>
+    <string name="quit">quit</string>
 </resources>
